--- a/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
@@ -53,7 +53,7 @@
                                 <rect key="frame" x="20" y="5.5" width="83" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="lcN-Lu-vHX">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="lcN-Lu-vHX">
                                         <rect key="frame" x="0.0" y="1.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="NVg-wF-hpO"/>
@@ -95,6 +95,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="authImage" destination="lcN-Lu-vHX" id="iL1-6Q-1uk"/>
                         <outlet property="homeTableView" destination="KEN-QC-FaX" id="9H0-gz-L9B"/>
                     </connections>
                 </viewController>
