--- a/Meter Card and Smart Parking Meter/Storyboards/User.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/User.storyboard
@@ -343,7 +343,7 @@
                                 <rect key="frame" x="20" y="5.5" width="83" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="hoR-Kb-f5a">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="hoR-Kb-f5a">
                                         <rect key="frame" x="0.0" y="1.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hoR-Kb-f5a" secondAttribute="height" multiplier="1:1" id="3hD-XC-Cct"/>
@@ -385,6 +385,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="authImage" destination="hoR-Kb-f5a" id="34b-Xr-aK1"/>
                         <outlet property="currentLocationButton" destination="DJd-XZ-WbH" id="bar-AE-vCq"/>
                         <outlet property="mapView" destination="j4H-h9-3jf" id="gZl-wv-gjo"/>
                         <outlet property="parkingInfo" destination="dEo-mL-cNb" id="nWh-7I-xIk"/>
